stacks/business/dolibarr/k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dolibarr
  labels:
    app.kubernetes.io/part-of: selfhosted-stack
